browser/themes/shared/browser-shared.css
/* ... */
@media (-moz-platform: macos) {
  /*
   * Styles for the swipe navigation SVG icon.
   *
   * `will-navigate` class name is added to the <svg> element when the user's
   * swipe gesture reached to the point where history navigation will be
   * triggered.
   */
  .swipe-nav-icon-circle-outline,
  .swipe-nav-icon-arrow {
    fill: var(--swipe-nav-icon-primary-color);

    .will-navigate > & {
      fill: var(--swipe-nav-icon-accent-color);
    }
  }

  .swipe-nav-icon-circle {
    fill: var(--swipe-nav-icon-accent-color);

    .will-navigate > & {
      fill: var(--swipe-nav-icon-primary-color);
    }
  }
}

/* Picture-in-Picture panel */

#PictureInPicturePanel {
  width: var(--menu-panel-width-wide);
  font: caption;
}

#PictureInPicturePanelBody {
  gap: 8px;
  padding: 8px 16px;
}

#PictureInPicturePanelFooter {
  margin: 8px 16px 16px;
}

/* AI Window Toggle Button */

#ai-window-toggle {
  list-style-image: url("chrome://branding/content/icon32.png");
  border-radius: var(--border-radius-medium);
  padding-inline-end: var(--space-small);

  /* Toggle button should only have padding-inline-end if #PanelUI-button both visible and rendered next to it */
  :root:not([aiwindow-first-run]) &:has(+ #PanelUI-button) {
    padding: 0 var(--toolbarbutton-outer-padding);
  }

  > .toolbarbutton-icon {
    padding: 8px;
    box-shadow: 0 0 16px 4px var(--box-shadow-color-darker-layer-1) inset;
  }

  /* Smart Window toggle */
  :root[ai-window] & {
    list-style-image: url("chrome://browser/skin/smart-window-simplified.svg");

    > .toolbarbutton-icon {
      /* Smart Window icon has additional 2px padding per side, to be slightly smaller than Classic Window icon when used in Switcher */
      padding: var(--toolbarbutton-inner-padding);
      box-shadow: 0 0 16px 4px var(--smartwindow-toggle-shadow-color) inset;
    }
  }
}

#ai-window-switch-classic,
#ai-window-switch-ai {
  &:hover {
    background-color: var(--button-background-color-ghost-hover);
  }

  .toolbarbutton-icon {
    margin-inline-end: var(--space-small);
    width: var(--icon-size-medium);
    height: var(--icon-size-medium);
  }

  &::after {
    content: url("chrome://global/skin/icons/check.svg");
    -moz-context-properties: fill;
    fill: currentColor;
    width: 16px;
    height: 16px;
    margin-inline-start: auto;
  }
}

#ai-window-switch-classic {
  list-style-image: url("chrome://branding/content/icon32.png");

  :root[ai-window] &::after {
    display: none;
  }
}

#ai-window-switch-ai {
  list-style-image: url("chrome://browser/skin/smart-window-simplified.svg");

  :root:not([ai-window]) &::after {
    display: none;
  }

  & > .toolbarbutton-icon {
    /* Smart Window icon has additional 2px padding per side, to be slightly smaller than Classic Window icon when used in Switcher */
    padding: 2px;
  }

  & > moz-badge {
    margin-inline-start: var(--space-medium);
  }
}

#appMenu-new-ai-window-button > moz-badge {
  margin-inline-start: auto;
}

/* AI window immersive view (hidden nav bar and buttons) */
:root[ai-window][aiwindow-immersive-view] {
  #nav-bar:not(.browser-titlebar) {
    height: 0;
    min-height: 0;
    visibility: hidden;
  }

  #urlbar-container,
  #nav-bar-customization-target > *:not(#sidebar-button),
  #nav-bar-overflow-button,
  #smartwindow-ask-button {
    visibility: hidden;
  }

  /* immersive view styles exclusive for first run */
  &[aiwindow-first-run] {
    #PanelUI-button {
      display: none;
    }

    #TabsToolbar > .toolbar-items {
      opacity: 0.2;
      pointer-events: none;
    }

    /* stylelint-disable-next-line media-query-no-invalid */
    @media -moz-pref("sidebar.verticalTabs") {
      #sidebar-main {
        opacity: 0.2;
        pointer-events: none;
      }
    }
  }
}

/* Bookmarks roots menu-items */

#BMB_bookmarksToolbar,
#bookmarksToolbarFolderMenu {
  --menuitem-icon: url("chrome://browser/skin/places/bookmarksToolbar.svg");
}

